###############################
# Veränderungen von kivitendo #
###############################

2017-XX-XX - Release 3.5.X

große Features

- WebshopApi

	WebshopApi mit bisher einem Konnektor für Shopware.
	Damit ist es möglich Bestellungen aus dem Shop abzuholen und Artikel
	abzugleichen.

kleinere neue Features und Detailverbesserungen:

  - SEPA-XML: alle Sonderzeichen filtern
  - SEPA-Export: Export wieder rückgängig machen, falls noch Status offen
  - DATEV-Export: Um Strukturtyp CSV-Export erweitert
  - DATEV-Export: Kostenstellen (Kost1 und Kost2) vorbelegen
  - DATEV-Export: Buchungssätze nach Abteilung filtern
  - Stammdaten -> Berichte -> Artikel: Standardlager und Lagerplatz optional anzeigen
  - Vorbelegte Texte inkl. Ansprechpartner für den E-Mail-Versand bei allen Workflows hinzugefügt.
  - DATEV-Export: Buchungen für einen bestimmten Zeitraum ab einem
    Buchungsdatum filtern. Z.B. wenn man einen DATEV-Export für Januar schon
    exportiert hat, und im Juni noch ein Buchung für Januar nachbucht, kann man
    mit "Erfassungsdatum Von: 01.06.2017" nur diese eine Buchung aus Januar
    exportieren.
  - Kontoauszug verbuchen -> Buchung erstellen um Dialogbuchungen erweitert.
    Vom Kontoimport ist es jetzt auch möglich in Vorlagen aus der Dialog-
    Buchungsmaske zu buchen und nicht nur in Kreditorenbuchungsvorlagen

2017-07-17 - Release 3.5.0

große Features:

- Dateiverwaltung (Mini-DMS)

  parallel zum alten WebDAV gibt es nun eine Datei-Management Lösung, die
  über eine Speichermedium unabhängige Zwischenschicht die Dateien in der
  Datenbank verwaltet. Darunter können verschiedene Backends existieren.
  Aktuell ist dies eine Filesystem-Struktur.

  Modular können weitere Backends eingebunden werden. In Arbeit ist
  ein Backend, das auf die alte WebDAV-Struktur zugreift.

  Es gibt unterschiedliche Typen von Dateien, jedem Typ läßt sich in der
  Mandantenkonfigurierung auf ein bestimmtes Backend zuordnen.

  Aktuell gibt es die Dateitypen